# examples

./: Application.vala  README.md  meson.build  myapp.yml
.github/workflows/: main.yml
data/: gschema.xml  hello-again.appdata.xml  hello-again.desktop  meson.build  myapp.desktop  myapp.metainfo.xml  myapp.service
po/: POTFILES  de.po  es.po  io.github.myteam.myapp.pot
src/: Application.vala  Enums.vala
